cupt2 (2.0.0~alpha3~) UNRELEASED; urgency=low

  * lib:
    - cache/binaryversion:
      - 'parseFromFile': 10-25% speed-up.
    - file:
      - 'getRecord': removed parameter 'accepter'.
    - system/resolver:
      - 'operator=': forbidden now.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 14 Nov 2010 15:59:32 +0200

cupt2 (2.0.0~alpha2) UNRELEASED; urgency=low

  * console:
    - 'why': fixed infinite CPU and RAM usage when some of starting versions
      have a dependency cycle with any other version.
  * lib:
    - hashsums:
      - 'getStringHash': speed-up.
      - 'getStringHash': renamed to 'getHashOfString'.
      - 'getHashOfString': fixed crash on non-ASCII strings.
      - Use libgcrypt for hash computations.
    - cache:
      - Pre-parsing index files: really discard packages with broken package
        names.
      - 'operator=': forbidden now.
    - file:
      - 'getBlock': renamed to 'getRecord'.
      - destructor: check child exit status in a pipe mode.
    - common:
      - 'exception': renamed to 'Exception'.
    - system/resolvers/native:
      - Don't add new reason to an action which received unsatisfied soft
        dependency penalty.
    - config:
      - 'getNumber': renamed to 'getInteger'.
    - cache/version:
      - 'AvailableAsEntry': renamed to 'Source'.
      - 'availableAs': renamed to 'sources'.
    - download/progress:
      - 'progress': fixed nasty bug with wrong computing total download
        size when at least one download has an unknown size.
      - 'finish': renamed to 'finishHook' and moved to protected section.
      - 'getOverallEstimatedTime': now returns time since the start of the
        download session, not from the current moment.
      - don't include '<ctime>' header anymore.
    - Link with 'rt'.
    - cache/relation:
      - 'unarchitectureRelationLine': moved to ArchitecturedRelationLine class
        and renamed to 'toRelationLine'.