@@ -7,6 +7,7 @@ cupt2 (2.0.0~alpha3~) UNRELEASED; urgency=low
       - 'getRecord': removed parameter 'accepter'.
     - system/resolver:
       - 'operator=': forbidden now.
+      - Reorganized *Reason struct, transformed to struct hierarchy.
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 14 Nov 2010 15:59:32 +0200
 
